--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <title>Hafidh Muhammad Akbar's Portofolio</title>
 
+    <link rel="shortcut icon" href="images/undraw/logos.png" />
+
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/unicons.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
