--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
                     <div class="contact-info d-flex justify-content-between align-items-center py-4 px-lg-5">
                         <div class="contact-info-item">
                             <h3 class="mb-3 text-white">Say hello</h3>
-                            <p class="footer-text mb-0">@hafidhmuhammadakbar</p>
-                            <p><a href="mailto:hello@company.co">hafidhmuhammadakbar1@student.uns.ac.id</a></p>
+                            <p><a href="https://www.instagram.com/hafidhmuhammadakbar/" target="_blank" class="footer-text mb-0">@hafidhmuhammadakbar</a></p>
+                            <p><a href="mailto:hafidhmuhammadakbar1@student.uns.ac.id" target="_blank">hafidhmuhammadakbar1@student.uns.ac.id</a></p>
                         </div>
 
                         <ul class="social-links">
