--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
                         <div class="item">
                             <div class="project-info">
-                                <p><a href="https://github.com/hafidhmuhammadakbar/myapotex" target="_blank">
+                                <p><a href="https://alscheift.github.io/turing-simulation/" target="_blank">
                                     <img src="images/project/project-achievement-5.png" class="img-fluid" alt="project image">
                                 </a></p>
                             </div>
@@ -154,8 +154,16 @@
 
                         <div class="item">
                             <div class="project-info">
-                                <p><a href="https://github.com/hafidhmuhammadakbar/pemweb-domain-management-system" target="_blank">
+                                <p><a href="https://github.com/hafidhmuhammadakbar/myapotex" target="_blank">
                                     <img src="images/project/project-achievement-6.png" class="img-fluid" alt="project image">
+                                </a></p>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <div class="project-info">
+                                <p><a href="https://github.com/hafidhmuhammadakbar/pemweb-domain-management-system" target="_blank">
+                                    <img src="images/project/project-achievement-7.png" class="img-fluid" alt="project image">
                                 </a></p>
                             </div>
                         </div>
