--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@
                     </div>
 
                     <div class="owl-carousel owl-theme">
+
+                        <div class="item">
+                            <div class="project-info">
+                                <p><a href="https://www.credential.net/3b490ae2-9b3e-46c2-8a03-0009de9bb20f" target="_blank">
+                                    <img src="images/project/project-achievement-0.png" class="img-fluid" alt="project image">
+                                </a></p>
+                            </div>
+                        </div>
+
                         <div class="item">
                             <div class="project-info">
                                 <p><a href="https://www.instagram.com/p/CzlK0IkPyYp/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">
@@ -241,7 +250,7 @@
                             <div class="timeline-info">
                                 <h3><span>Bachelor of Informatics</span><small><a rel="nofollow"
                                     href="https://uns.ac.id/id/" target="_blank">Sebelas Maret University</a></small></h3>
-                                <p>5th undergraduate student majoring in Informatics with GPA 3.93/4.0.</p>
+                                <p>6th undergraduate student majoring in Informatics with GPA 3.93/4.0.</p>
                             </div>
                         </div>
                     </div>
