--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <div class="item">
                             <div class="project-info">
                                 <p><a href="https://www.credential.net/3b490ae2-9b3e-46c2-8a03-0009de9bb20f" target="_blank">
-                                    <img src="images/project/project-achievement-0.png" class="img-fluid" alt="project image">
+                                    <img src="images/project/project-achievement-0.jpg" class="img-fluid" alt="project image">
                                 </a></p>
                             </div>
                         </div>
@@ -273,18 +273,16 @@
                     </div>
 
                     <div class="contact-info d-flex justify-content-between align-items-center py-4 px-lg-5">
-                        <div class="contact-info-item">
+                        <ul class="contact-info-item">
                             <h3 class="mb-3 text-white">Say hello</h3>
-                            <p><a href="https://www.instagram.com/hafidhmuhammadakbar/" target="_blank" class="footer-text mb-0">@hafidhmuhammadakbar</a></p>
-                            <p><a href="mailto:hafidhmuhammadakbar1@student.uns.ac.id" target="_blank">hafidhmuhammadakbar1@student.uns.ac.id</a></p>
-                        </div>
+                            <li><a href="https://www.instagram.com/hafidhmuhammadakbar/" target="_blank" class="footer-text mb-0">@hafidhmuhammadakbar</a></li>
+                            <li><a href="mailto:hafidhmuhammadakbar1@student.uns.ac.id" target="_blank">hafidhmuhammadakbar1@student.uns.ac.id</a></li>
+                        </ul>
 
                         <ul class="social-links">
-                            <li><a href="#" class="uil uil-dribbble" data-toggle="tooltip" data-placement="left"
-                                    title="Dribbble"></a></li>
-                            <li><a href="#" class="uil uil-instagram" data-toggle="tooltip" data-placement="left"
+                            <li><a href="https://www.instagram.com/hafidhmuhammadakbar/" target="_blank" class="uil uil-instagram mt-5" data-toggle="tooltip" data-placement="left"
                                     title="Instagram"></a></li>
-                            <li><a href="#" class="uil uil-youtube" data-toggle="tooltip" data-placement="left"
+                            <li><a href="https://www.youtube.com/@hafidhmuhammadakbar874" target="_blank" class="uil uil-youtube" data-toggle="tooltip" data-placement="left"
                                     title="Youtube"></a></li>
                         </ul>
                     </div>
