--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <title>Hafidh Muhammad Akbar | Portfolio</title>
     <!-- Logo -->
     <!-- Basic Favicon (Fallback) -->
-    <link rel="icon" href="/assets/favicon/logo_16-16.png" type="image/png">
+    <link rel="icon" href="assets/favicon/logo_16-16.png" type="image/png">
 
     <!-- Standard Sizes -->
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/logo_16-16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/logo_32-32.png">
-    <link rel="icon" type="image/png" sizes="48x48" href="/assets/favicon/logo_48-48.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/logo_16-16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/logo_32-32.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="assets/favicon/logo_48-48.png">
 
     <!-- Apple Touch Icon (iOS) -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/logo_180-180.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/logo_180-180.png">
 
     <!-- Android/Modern Browsers -->
-    <link rel="icon" type="image/png" sizes="192x192" href="/assets/favicon/logo_192-192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="/assets/favicon/logo_512-512.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/logo_192-192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/favicon/logo_512-512.png">
 
     <!-- Web App Manifest (PWA Support) -->
-    <link rel="manifest" href="/assets/favicon/site.webmanifest">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -34,7 +34,7 @@
     <!-- navbar -->
     <nav class="bg-white shadow-md fixed w-full z-10">
       <div class="container mx-auto px-4 py-3 flex justify-between items-center">
-        <a href="../index.html" class="text-2xl font-bold text-blue-600">Hafidh Muhammad Akbar</a>
+        <a href="index.html" class="text-2xl font-bold text-blue-600">Hafidh Muhammad Akbar</a>
         <!-- Desktop Menu -->
         <div class="hidden md:flex space-x-8">
           <a href="#about" class="hover:text-blue-600">About</a>
