--- a/projects/ml-projects.html
+++ b/projects/ml-projects.html
@@ -6,22 +6,22 @@
     <title>Hafidh Muhammad Akbar | Portfolio</title>
     <!-- Logo -->
     <!-- Basic Favicon (Fallback) -->
-    <link rel="icon" href="/assets/favicon/logo_16-16.png" type="image/png">
+    <link rel="icon" href="assets/favicon/logo_16-16.png" type="image/png">
 
     <!-- Standard Sizes -->
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/logo_16-16.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/logo_32-32.png">
-    <link rel="icon" type="image/png" sizes="48x48" href="/assets/favicon/logo_48-48.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/logo_16-16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/logo_32-32.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="assets/favicon/logo_48-48.png">
 
     <!-- Apple Touch Icon (iOS) -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/logo_180-180.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/logo_180-180.png">
 
     <!-- Android/Modern Browsers -->
-    <link rel="icon" type="image/png" sizes="192x192" href="/assets/favicon/logo_192-192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="/assets/favicon/logo_512-512.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/logo_192-192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="assets/favicon/logo_512-512.png">
 
     <!-- Web App Manifest (PWA Support) -->
-    <link rel="manifest" href="/assets/favicon/site.webmanifest">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -40,13 +40,13 @@
     <!-- Navbar -->
     <nav class="bg-white shadow-md fixed w-full z-10">
       <div class="container mx-auto px-4 py-3 flex justify-between items-center">
-        <a href="/index.html" class="text-2xl font-bold text-blue-600">Hafidh Muhammad Akbar</a>
+        <a href="index.html" class="text-2xl font-bold text-blue-600">Hafidh Muhammad Akbar</a>
         <div class="hidden md:flex space-x-8">
-          <a href="/index.html#about" class="hover:text-blue-600">About</a>
-          <a href="/index.html#experience" class="hover:text-blue-600">Experience</a>
-          <a href="/index.html#certifications" class="hover:text-blue-600">Certifications</a>
-          <a href="/index.html#projects" class="hover:text-blue-600">Projects</a>
-          <a href="/index.html#contact" class="hover:text-blue-600">Contact</a>
+          <a href="../index.html#about" class="hover:text-blue-600">About</a>
+          <a href="../index.html#experience" class="hover:text-blue-600">Experience</a>
+          <a href="../index.html#certifications" class="hover:text-blue-600">Certifications</a>
+          <a href="../index.html#projects" class="hover:text-blue-600">Projects</a>
+          <a href="../index.html#contact" class="hover:text-blue-600">Contact</a>
         </div>
         <button id="menu-btn" class="md:hidden">
           <i class="fas fa-bars text-xl"></i>
@@ -54,11 +54,11 @@
       </div>
       <!-- Mobile Menu -->
       <div id="mobile-menu" class="hidden md:hidden bg-white py-2 px-4">
-        <a href="/index.html#about" class="block py-2 hover:text-blue-600">About</a>
-        <a href="/index.html#experience" class="block py-2 hover:text-blue-600">Experience</a>
-        <a href="/index.html#certifications" class="block py-2 hover:text-blue-600">Certifications</a>
-        <a href="/index.html#projects" class="block py-2 hover:text-blue-600">Projects</a>
-        <a href="/index.html#contact" class="block py-2 hover:text-blue-600">Contact</a>
+        <a href="../index.html#about" class="block py-2 hover:text-blue-600">About</a>
+        <a href="../index.html#experience" class="block py-2 hover:text-blue-600">Experience</a>
+        <a href="../index.html#certifications" class="block py-2 hover:text-blue-600">Certifications</a>
+        <a href="../index.html#projects" class="block py-2 hover:text-blue-600">Projects</a>
+        <a href="../index.html#contact" class="block py-2 hover:text-blue-600">Contact</a>
       </div>
     </nav>
 
@@ -72,7 +72,7 @@
           <div class="order-1 md:order-2 project-card bg-white rounded-xl shadow-md overflow-hidden">
             <div class="h-48 overflow-hidden">
               <img 
-                src="../assets/images/airqualityprediction.png" 
+                src="assets/images/airqualityprediction.png" 
                 alt="Air Quality Prediction" 
                 class="w-full h-full object-cover project-image transition duration-500"
               >
@@ -110,7 +110,7 @@
           <div class="project-card bg-white rounded-xl shadow-md overflow-hidden">
             <div class="h-48 overflow-hidden">
               <img 
-                src="../assets/images/nutrimate.png" 
+                src="assets/images/nutrimate.png" 
                 alt="NutriMate App" 
                 class="w-full h-full object-cover project-image transition duration-500"
               >
@@ -147,7 +147,7 @@
           <div class="order-1 md:order-2 project-card bg-white rounded-xl shadow-md overflow-hidden">
             <div class="h-48 overflow-hidden">
               <img 
-                src="../assets/images/genderscanner.jpg" 
+                src="assets/images/genderscanner.jpg" 
                 alt="GenderScanner App" 
                 class="w-full h-full object-cover project-image transition duration-500"
               >
@@ -185,7 +185,7 @@
           <div class="project-card bg-white rounded-xl shadow-md overflow-hidden">
             <div class="h-48 overflow-hidden">
               <img 
-                src="../assets/images/meatidentify.jpg" 
+                src="assets/images/meatidentify.jpg" 
                 alt="MeatIDentify App" 
                 class="w-full h-full object-cover project-image transition duration-500"
               >
@@ -229,9 +229,6 @@
 
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="/js/script.js"></script>
-    <script>
-      console.log("Inline script works!");
-    </script>
+    <script src="js/script.js"></script>
   </body>
 </html>
