--- a/projects/ml-projects.html
+++ b/projects/ml-projects.html
@@ -75,6 +75,7 @@
                 src="../assets/images/airqualityprediction.png" 
                 alt="Air Quality Prediction" 
                 class="w-full h-full object-cover project-image transition duration-500"
+                loading="lazy"
               >
             </div>
             <div class="p-6">
@@ -113,6 +114,7 @@
                 src="../assets/images/nutrimate.png" 
                 alt="NutriMate App" 
                 class="w-full h-full object-cover project-image transition duration-500"
+                loading="lazy"
               >
             </div>
             <div class="p-6">
@@ -150,6 +152,7 @@
                 src="../assets/images/genderscanner.jpg" 
                 alt="GenderScanner App" 
                 class="w-full h-full object-cover project-image transition duration-500"
+                loading="lazy"
               >
             </div>
             <div class="p-6">
@@ -188,6 +191,7 @@
                 src="../assets/images/meatidentify.jpg" 
                 alt="MeatIDentify App" 
                 class="w-full h-full object-cover project-image transition duration-500"
+                loading="lazy"
               >
             </div>
             <div class="p-6">
