--- a/projects/web-projects.html
+++ b/projects/web-projects.html
@@ -75,6 +75,7 @@
                 src="../assets/images/pharmacymanagement.png" 
                 alt="Pharmacy Management System" 
                 class="w-full h-full object-cover project-image transition duration-500"
+                loading="lazy"
               >
             </div>
             <div class="p-6">
@@ -113,6 +114,7 @@
                 src="../assets/images/domainmanagement.png" 
                 alt="Domain Management System" 
                 class="w-full h-full object-cover project-image transition duration-500"
+                loading="lazy"
               >
             </div>
             <div class="p-6">
@@ -151,6 +153,7 @@
                 src="../assets/images/turingmachine.png" 
                 alt="Turing Machine Simulator" 
                 class="w-full h-full object-cover project-image transition duration-500"
+                loading="lazy"
               >
             </div>
             <div class="p-6">
