--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             Fresh Informatics graduate from Universitas Sebelas Maret with a passion for building intelligent systems, specializing in computer vision, NLP, and database optimization. Skilled in Python, SQL, and predictive modeling, with hands-on experience building ML models and working with databases. Enjoys solving real-world problems with data and often explores ideas through competitions and writing. Looking to apply both analytical and programming skills to contribute to impactful projects.
           </p>
           <!-- Profile Image -->
-          <img src="../assets/images/profile.jpg" alt="Profile" class="w-64 h-64 rounded-full mx-auto mb-6" loading="lazy">
+          <img src="assets/images/profile.jpg" alt="Profile" class="w-64 h-64 rounded-full mx-auto mb-6" loading="lazy">
         </div>
       </div>
     </section>
