change colour icon when dark theme

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md dark:shadow-gray-900 overflow-hidden hover:shadow-lg dark:hover:shadow-gray-800 transition" data-aos="flip-left">
             <div class="p-6">
               <div class="flex items-center mb-4">
-                <img src="assets/icons/google.svg" alt="Google" class="w-12 h-12 mr-4">
+                <img src="assets/icons/google.svg" alt="Google" class="w-12 h-12 mr-4 dark:filter dark:brightness-0 dark:invert">
                 <h3 class="text-lg font-bold dark:text-white">TensorFlow Developer</h3>
               </div>
               <p class="text-gray-600 dark:text-gray-300 mb-4">Google | Sept 2024 - Sept 2029</p>
@@ -208,7 +208,7 @@
           <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md dark:shadow-gray-900 overflow-hidden hover:shadow-lg dark:hover:shadow-gray-800 transition" data-aos="flip-right">
             <div class="p-6">
               <div class="flex items-center mb-4">
-                <img src="assets/icons/coursera.svg" alt="Coursera" class="w-12 h-12 mr-4">
+                <img src="assets/icons/coursera.svg" alt="Coursera" class="w-12 h-12 mr-4 dark:filter dark:brightness-0 dark:invert">
                 <h3 class="text-lg font-bold dark:text-white">TensorFlow: Data and Deployment</h3>
               </div>
               <p class="text-gray-600 dark:text-gray-300 mb-4">Coursera | Nov 2023</p>
@@ -226,7 +226,7 @@
           <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md dark:shadow-gray-900 overflow-hidden hover:shadow-lg dark:hover:shadow-gray-800 transition" data-aos="flip-right">
             <div class="p-6">
               <div class="flex items-center mb-4">
-                <img src="assets/icons/coursera.svg" alt="Coursera" class="w-12 h-12 mr-4">
+                <img src="assets/icons/coursera.svg" alt="Coursera" class="w-12 h-12 mr-4 dark:filter dark:brightness-0 dark:invert">
                 <h3 class="text-lg font-bold dark:text-white">Structuring Machine Learning Projects</h3>
               </div>
               <p class="text-gray-600 dark:text-gray-300 mb-4">Coursera | Nov 2023</p>
@@ -244,7 +244,7 @@
           <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md dark:shadow-gray-900 overflow-hidden hover:shadow-lg dark:hover:shadow-gray-800 transition" data-aos="flip-right">
             <div class="p-6">
               <div class="flex items-center mb-4">
-                <img src="assets/icons/coursera.svg" alt="Coursera" class="w-12 h-12 mr-4">
+                <img src="assets/icons/coursera.svg" alt="Coursera" class="w-12 h-12 mr-4 dark:filter dark:brightness-0 dark:invert">
                 <h3 class="text-lg font-bold dark:text-white">DeepLearning.AI TensorFlow Developer</h3>
               </div>
               <p class="text-gray-600 dark:text-gray-300 mb-4">Coursera | Oct 2023</p>
@@ -262,7 +262,7 @@
           <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md dark:shadow-gray-900 overflow-hidden hover:shadow-lg dark:hover:shadow-gray-800 transition" data-aos="flip-right">
             <div class="p-6">
               <div class="flex items-center mb-4">
-                <img src="assets/icons/coursera.svg" alt="Coursera" class="w-12 h-12 mr-4">
+                <img src="assets/icons/coursera.svg" alt="Coursera" class="w-12 h-12 mr-4 dark:filter dark:brightness-0 dark:invert">
                 <h3 class="text-lg font-bold dark:text-white">Machine Learning Specialization</h3>
               </div>
               <p class="text-gray-600 dark:text-gray-300 mb-4">Coursera | Oct 2023</p>
@@ -280,7 +280,7 @@
           <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md dark:shadow-gray-900 overflow-hidden hover:shadow-lg dark:hover:shadow-gray-800 transition" data-aos="flip-right">
             <div class="p-6">
               <div class="flex items-center mb-4">
-                <img src="assets/icons/coursera.svg" alt="Coursera" class="w-12 h-12 mr-4">
+                <img src="assets/icons/coursera.svg" alt="Coursera" class="w-12 h-12 mr-4 dark:filter dark:brightness-0 dark:invert">
                 <h3 class="text-lg font-bold dark:text-white">Mathematics for Machine Learning and Data Science</h3>
               </div>
               <p class="text-gray-600 dark:text-gray-300 mb-4">Coursera | Oct 2023</p>
@@ -663,7 +663,7 @@
     </footer>
 
     <!-- Back to Top Button -->
-    <a href="#top" class="fixed bottom-4 right-4 bg-blue-600 text-white p-3 rounded-full shadow-lg hover:bg-blue-700 transition">
+    <a href="#top" class="fixed bottom-4 right-4 bg-blue-600 dark:bg-blue-700 text-white p-3 rounded-full shadow-lg hover:bg-blue-700 dark:hover:bg-blue-800 transition">
       <i class="fas fa-chevron-up"></i>
     </a>
 
