--- a/projects/ml-projects.html
+++ b/projects/ml-projects.html
@@ -259,7 +259,7 @@
     </footer>
 
     <!-- Back to Top Button -->
-    <a href="#top" class="fixed bottom-4 right-4 bg-blue-600 text-white p-3 rounded-full shadow-lg hover:bg-blue-700 transition">
+    <a href="#top" class="fixed bottom-4 right-4 bg-blue-600 dark:bg-blue-700 text-white p-3 rounded-full shadow-lg hover:bg-blue-700 dark:hover:bg-blue-800 transition">
       <i class="fas fa-chevron-up"></i>
     </a>
 
