--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md dark:shadow-gray-900 overflow-hidden hover:shadow-lg dark:hover:shadow-gray-800 transition" data-aos="flip-left">
             <div class="p-6">
               <div class="flex items-center mb-4">
-                <img src="assets/icons/google.svg" alt="Google" class="w-12 h-12 mr-4 dark:filter dark:brightness-0 dark:invert">
+                <img src="assets/icons/tensorflow.svg" alt="TensorFlow" class="w-12 h-12 mr-4 dark:filter dark:brightness-0 dark:invert">
                 <h3 class="text-lg font-bold dark:text-white">TensorFlow Developer</h3>
               </div>
               <p class="text-gray-600 dark:text-gray-300 mb-4">Google | Sept 2024 - Sept 2029</p>
