--- a/index.html
+++ b/index.html
@@ -208,6 +208,23 @@
           <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md dark:shadow-gray-900 overflow-hidden hover:shadow-lg dark:hover:shadow-gray-800 transition" data-aos="flip-right">
             <div class="p-6">
               <div class="flex items-center mb-4">
+                <h3 class="text-lg font-bold dark:text-white">Bangkit Academy 2023: Machine Learning</h3>
+              </div>
+              <p class="text-gray-600 dark:text-gray-300 mb-4">Bangkit Academy | Jan 2024</p>
+              <a 
+                href="assets/pdf/Bangkit_Certificate.pdf" 
+                target="_blank"
+                class="inline-flex items-center text-blue-600 dark:text-blue-400 hover:underline"
+              >
+                View Credential <i class="fas fa-external-link-alt ml-2"></i>
+              </a>
+            </div>
+          </div>
+
+          <!-- Certification Card 3 -->
+          <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md dark:shadow-gray-900 overflow-hidden hover:shadow-lg dark:hover:shadow-gray-800 transition" data-aos="flip-right">
+            <div class="p-6">
+              <div class="flex items-center mb-4">
                 <img src="assets/icons/coursera.svg" alt="Coursera" class="w-12 h-12 mr-4 dark:filter dark:brightness-0 dark:invert">
                 <h3 class="text-lg font-bold dark:text-white">TensorFlow: Data and Deployment</h3>
               </div>
@@ -222,7 +239,7 @@
             </div>
           </div>
 
-          <!-- Certification Card 3 -->
+          <!-- Certification Card 4 -->
           <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md dark:shadow-gray-900 overflow-hidden hover:shadow-lg dark:hover:shadow-gray-800 transition" data-aos="flip-right">
             <div class="p-6">
               <div class="flex items-center mb-4">
@@ -240,7 +257,7 @@
             </div>
           </div>
 
-          <!-- Certification Card 4 -->
+          <!-- Certification Card 5 -->
           <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md dark:shadow-gray-900 overflow-hidden hover:shadow-lg dark:hover:shadow-gray-800 transition" data-aos="flip-right">
             <div class="p-6">
               <div class="flex items-center mb-4">
@@ -258,7 +275,7 @@
             </div>
           </div>
 
-          <!-- Certification Card 5 -->
+          <!-- Certification Card 6 -->
           <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md dark:shadow-gray-900 overflow-hidden hover:shadow-lg dark:hover:shadow-gray-800 transition" data-aos="flip-right">
             <div class="p-6">
               <div class="flex items-center mb-4">
@@ -276,7 +293,7 @@
             </div>
           </div>
 
-          <!-- Certification Card 6 -->
+          <!-- Certification Card 7 -->
           <div class="bg-white dark:bg-gray-800 rounded-xl shadow-md dark:shadow-gray-900 overflow-hidden hover:shadow-lg dark:hover:shadow-gray-800 transition" data-aos="flip-right">
             <div class="p-6">
               <div class="flex items-center mb-4">
