--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <h2 class="text-3xl font-bold mb-8 text-center dark:text-white">About Me</h2>
         <div class="max-w-3xl mx-auto text-center">
           <p class="text-gray-700 dark:text-gray-300 mb-6">
-            Fresh Informatics graduate from Universitas Sebelas Maret with a passion for building intelligent systems, specializing in computer vision, NLP, and database optimization. Skilled in Python, SQL, and predictive modeling, with hands-on experience building ML models and working with databases. Enjoys solving real-world problems with data and often explores ideas through competitions and writing. Looking to apply both analytical and programming skills to contribute to impactful projects.
+            Data Engineer at Akuntplus with a solid foundation in ETL processes, data pipeline development, and data modeling. A recent Informatics graduate from Universitas Sebelas Maret, experienced in designing and optimizing end-to-end data workflows. Proficient in Python and SQL, with a strong grasp of database systems, data warehousing, and cloud-based tools. Adept at transforming raw data into reliable, structured formats to support analysis and decision-making. Committed to building scalable, efficient data infrastructure that drives meaningful business impact. Beyond the role, has a personal interest in artificial intelligence, especially in areas like computer vision and natural language processing.
           </p>
           <img src="assets/images/profile.jpg" alt="Profile" class="w-64 h-64 rounded-full mx-auto mb-6 dark:brightness-90 dark:contrast-110" loading="lazy">
         </div>
@@ -123,6 +123,19 @@
           <!-- Job 1 -->
           <div class="mb-8" data-aos="fade-right">
             <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md dark:shadow-gray-900 hover:shadow-lg dark:hover:shadow-gray-800 transition">
+              <h3 class="text-xl font-bold dark:text-white">Data Engineer</h3>
+              <p class="text-gray-600 dark:text-gray-300">Akuntplus | Contract | Jun 2025 - Now</p>
+              <ul class="mt-4 list-disc pl-5 dark:text-gray-300">
+                <li>Designed and maintained ETL pipelines to extract, transform, and load data from multiple sources into centralized data warehouses</li>
+                <li>Developed and optimized SQL queries for efficient data extraction, transformation, and reporting</li>
+                <li>Implemented data validation and quality checks to improve reliability and trust in business data</li>
+                <li>Documented data processes and created clear handover materials to support team scalability and maintainability</li>
+              </ul>
+            </div>
+          </div>
+          <!-- Job 2 -->
+          <div class="mb-8" data-aos="fade-left">
+            <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md dark:shadow-gray-900 hover:shadow-lg dark:hover:shadow-gray-800 transition">
               <h3 class="text-xl font-bold dark:text-white">Teaching Assistant (Database Systems and Programming Basics)</h3>
               <p class="text-gray-600 dark:text-gray-300">Universitas Sebelas Maret | Contract | Aug 2023 - Jan 2025</p>
               <ul class="mt-4 list-disc pl-5 dark:text-gray-300">
@@ -133,8 +146,8 @@
               </ul>
             </div>
           </div>
-          <!-- Job 2 -->
-          <div class="mb-8" data-aos="fade-left">
+          <!-- Job 3 -->
+          <div class="mb-8" data-aos="fade-right">
             <div class="bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md dark:shadow-gray-900 hover:shadow-lg dark:hover:shadow-gray-800 transition">
               <h3 class="text-xl font-bold dark:text-white">ML Engineer (Project-Based Experience)</h3>
               <p class="text-gray-600 dark:text-gray-300">Bangkit Academy | Internship | Aug 2023 - Jan 2024</p>
