--- a/index.html
+++ b/index.html
@@ -765,8 +765,8 @@
           <div class="mb-8 bg-white dark:bg-gray-800 rounded-lg shadow-md dark:shadow-gray-900 hover:shadow-lg dark:hover:shadow-gray-800 transition" data-aos="zoom-in">
             <div class="p-6">
               <div class="flex items-start">
-                <div class="mr-4 text-green-500">
-                  <i class="fas fa-microphone text-3xl"></i>
+                <div class="mr-4 text-blue-500">
+                  <i class="fas fa-file-alt text-3xl"></i>
                 </div>
                 <div>
                   <h3 class="text-xl font-bold dark:text-white">ACMU-Net: An Efficient Architecture Based on ConvMixer and Attention Mechanism for Colorectal Polyp Segmentation</h3>
@@ -777,7 +777,7 @@
                       target="_blank"
                       class="flex items-center text-sm bg-green-100 dark:bg-green-900 text-green-800 dark:text-green-200 px-3 py-1 rounded-full"
                     >
-                      <i class="fas fa-doi mr-1"></i> DOI
+                      <i class="fas fa-link mr-1"></i> Full Text
                     </a>
                   </div>
                 </div>
@@ -789,8 +789,8 @@
           <div class="mb-8 bg-white dark:bg-gray-800 rounded-lg shadow-md dark:shadow-gray-900 hover:shadow-lg dark:hover:shadow-gray-800 transition" data-aos="zoom-in">
             <div class="p-6">
               <div class="flex items-start">
-                <div class="mr-4 text-green-500">
-                  <i class="fas fa-microphone text-3xl"></i>
+                <div class="mr-4 text-blue-500">
+                  <i class="fas fa-file-alt text-3xl"></i>
                 </div>
                 <div>
                   <h3 class="text-xl font-bold dark:text-white">Improved Factorized Residual U-Net for Biomedical Polyp Segmentation</h3>
@@ -801,7 +801,7 @@
                       target="_blank"
                       class="flex items-center text-sm bg-green-100 dark:bg-green-900 text-green-800 dark:text-green-200 px-3 py-1 rounded-full"
                     >
-                      <i class="fas fa-doi mr-1"></i> DOI
+                      <i class="fas fa-link mr-1"></i> Full Text
                     </a>
                   </div>
                 </div>
@@ -813,8 +813,8 @@
           <div class="mb-8 bg-white dark:bg-gray-800 rounded-lg shadow-md dark:shadow-gray-900 hover:shadow-lg dark:hover:shadow-gray-800 transition" data-aos="zoom-in">
             <div class="p-6">
               <div class="flex items-start">
-                <div class="mr-4 text-green-500">
-                  <i class="fas fa-microphone text-3xl"></i>
+                <div class="mr-4 text-blue-500">
+                  <i class="fas fa-file-alt text-3xl"></i>
                 </div>
                 <div>
                   <h3 class="text-xl font-bold dark:text-white">AGU-NET: Attention Ghost U-Net Untuk Segmentasi Penyakit Polip Berbasis Citra Biomedis</h3>
@@ -825,7 +825,7 @@
                       target="_blank"
                       class="flex items-center text-sm bg-green-100 dark:bg-green-900 text-green-800 dark:text-green-200 px-3 py-1 rounded-full"
                     >
-                      <i class="fas fa-doi mr-1"></i> DOI
+                      <i class="fas fa-link mr-1"></i> Full Text
                     </a>
                   </div>
                 </div>
